force-app/main/default/objects/Engagement_Score_Snapshot__c/Engagement_Score_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold contact engagement score snapshot report</description>
    <label>Engagement Score Snapshot</label>
    <nameField>
        <displayFormat>EngagementSnapshot-{0000}</displayFormat>
        <label>Engagement Score Snapshot  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Score Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>