force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/AMCP_Learn_Products__c.field-meta.xml
<CustomField>
    <fullName>AMCP_Learn_Products__c</fullName>
    <label>AMCP Learn Products</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>