force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Board_Committee_Score__c.field-meta.xml
<CustomField>
    <fullName>Board_Committee_Score__c</fullName>
    <label>Leadership</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>