force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/CE_Webinar_Score__c.field-meta.xml
<CustomField>
    <fullName>CE_Webinar_Score__c</fullName>
    <label>CE Webinar Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>