force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Champion_Score__c.field-meta.xml
<CustomField>
    <fullName>Champion_Score__c</fullName>
    <label>Champion Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>