force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Score Snapshots</relationshipLabel>
    <relationshipName>Engagement_Score_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>