force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Donation_Score__c.field-meta.xml
<CustomField>
    <fullName>Donation_Score__c</fullName>
    <label>Donation Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>