force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Engagement_Category__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Category__c</fullName>
    <label>Engagement Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>