force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Meeting_Affiliate_Score__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Affiliate_Score__c</fullName>
    <label>Meeting-Affiliate Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>