force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Meeting_Virtual__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Virtual__c</fullName>
    <label>Meeting – Virtual</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>