force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Meetings_Large_Score__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Large_Score__c</fullName>
    <label>Meetings-Large Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>