force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Meetings_Score__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Score__c</fullName>
    <label>Meetings Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>