force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Membership_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Membership_Engagement_Score__c</fullName>
    <label>Membership</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>