force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Overall_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Engagement_Score__c</fullName>
    <description>This will have the engagement score on a particular day</description>
    <label>Overall Engagement Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>