force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Volunteer_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Long_Term__c</fullName>
    <label>Volunteer - Long Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>