force-app/main/default/objects/Engagement_Score_Snapshot__c/fields/Volunteer_Short_Term_Score__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Short_Term_Score__c</fullName>
    <label>Volunteer Short Term Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>